--- a/app/views/drawmsgs/_draw.html.erb
+++ b/app/views/drawmsgs/_draw.html.erb
@@ -54,7 +54,7 @@
         <h1 class="text-center">請選擇你想交流的(可複選)</h1>
         <div style="display:block;width:100%;">
           <div class="user-category">
-            工藝
+            工頁設計
             <%= image_tag 'user/A.png',:class =>"user-category-img" %>
             <input type="checkbox" name="A">
           </div>
@@ -64,22 +64,22 @@
             <input type="checkbox" name="B">
           </div>
           <div class="user-category">
-            插畫
+            圖文創作
             <%= image_tag 'user/C.png',:class =>"user-category-img" %>
             <input type="checkbox" name="C">
           </div>
           <div class="user-category">
-            油畫水彩
+            藝術
             <%= image_tag 'user/D.png',:class =>"user-category-img" %>
             <input type="checkbox" name="D">
           </div>
           <div class="user-category">
-            服裝
+            服裝設計
             <%= image_tag 'user/E.png',:class =>"user-category-img" %>
             <input type="checkbox" name="E">
           </div>
           <div class="user-category">
-            介面UI
+            UI平面設計
             <%= image_tag 'user/F.png',:class =>"user-category-img" %>
             <input type="checkbox" name="F">
           </div>
