--- a/app/views/layouts/_mobilemenu.html.erb
+++ b/app/views/layouts/_mobilemenu.html.erb
@@ -11,7 +11,7 @@
       <ul class="nav navbar-nav">
         <li class="biglink"><%= link_to '動態實況',posts_path %></li>
         <hr>
-        <li class="biglink"><%= link_to '找設計師',users_path %></li>
+        <li class="biglink"><%= link_to '找創作者',users_path %></li>
         <hr>
         <% if current_user  %>
           <li class="biglink"><%= link_to current_user.name , current_user%></li>
