--- a/app/views/users/adminuser.html.erb
+++ b/app/views/users/adminuser.html.erb
@@ -4,7 +4,7 @@
       <div class="usercard">
         <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'usercard-avatar'),user %><br>
         <p class="text-center"><%= user.name %></p><br>
-        <div class="text-center"><%= raw user.about %></div><br>
+        <div class="text-center" style="overflow-wrap:break-word;"><%= raw user.about %></div><br>
         <p class="text-center"><%= user.email %></p><br>
         <div class="btnbar">
           <%= link_to '刪除帳號' , admindestroy_path(user.id) , :class => 'ui black basic button', method: :delete, data: { confirm: "確定刪除嗎?" },remote: :true %>
