--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,7 +33,7 @@
       <div class="field">
         <%= f.label :category,'你最擅長、作品最常出現的領域(可複選):'%>
         <div class="user-category">
-          工藝
+          工業設計
           <%= image_tag 'user/A.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'A' ) %>
         </div>
@@ -43,22 +43,22 @@
           <%= f.check_box(:category, { :multiple => true }, 'B' ) %>
         </div>
         <div class="user-category">
-          插畫
+          圖文創作
           <%= image_tag 'user/C.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'C' ) %>
         </div><br>
         <div class="user-category">
-          油畫水彩
+          藝術
           <%= image_tag 'user/D.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'D' ) %>
         </div>
         <div class="user-category">
-          服裝
+          服裝設計
           <%= image_tag 'user/E.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'E' ) %>
         </div>
         <div class="user-category">
-          介面UI
+          UI平面設計
           <%= image_tag 'user/F.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'F' ) %>
         </div>
