--- a/app/views/drawmsgs/_draw.html.erb
+++ b/app/views/drawmsgs/_draw.html.erb
@@ -85,7 +85,7 @@
           </div>
           <div class="user-category">
             動畫電繪
-            <%= image_tag 'user/F.png',:class =>"user-category-img" %>
+            <%= image_tag 'user/G.png',:class =>"user-category-img" %>
             <input type="checkbox" name="G">
           </div>
           <div class="text-center">
