--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -64,7 +64,7 @@
         </div>
         <div class="user-category">
           動畫電繪
-          <%= image_tag 'user/F.png',:class =>"user-category-img" %>
+          <%= image_tag 'user/G.png',:class =>"user-category-img" %>
           <%= f.check_box(:category, { :multiple => true }, 'G' ) %>
         </div><br>
       </div>
