--- a/app/views/users/_usercategory.html.erb
+++ b/app/views/users/_usercategory.html.erb
@@ -36,7 +36,7 @@
             </div>
             <div class="user-category">
               動畫電繪
-              <%= image_tag 'user/F.png',:class =>"user-category-img" %>
+              <%= image_tag 'user/G.png',:class =>"user-category-img" %>
               <%= f.check_box(:category, { :multiple => true }, 'G' ) %>
             </div>
             <%= f.submit '送出', :class =>"tiny ui black basic button" ,:style =>"margin:20px auto;display:block;"%>
