--- a/app/views/drawmsgs/_draw.html.erb
+++ b/app/views/drawmsgs/_draw.html.erb
@@ -25,7 +25,7 @@
                 <div class="field">
                   <%= f.text_field :content,:placeholder => "想說的一句話" %>
                 </div>
-                <input type='hidden' value='<%= post.user_id %>' name='draw[receiver_id]' />
+                <input type='hidden' value='<%= post.user_id %>' name='drawmsg[receiver_id]' />
                 <div class="field">
                   <%= f.submit '傳送', :class =>"tiny ui black basic button", data: {confirm: "確定送出?" } %>
                 </div>
