--- a/app/views/drawmsgs/_draw.html.erb
+++ b/app/views/drawmsgs/_draw.html.erb
@@ -54,7 +54,7 @@
         <h1 class="text-center">請選擇你想交流的(可複選)</h1>
         <div style="display:block;width:100%;">
           <div class="user-category">
-            工頁設計
+            工業設計
             <%= image_tag 'user/A.png',:class =>"user-category-img" %>
             <input type="checkbox" name="A">
           </div>
