--- a/app/views/messages/notice.html.erb
+++ b/app/views/messages/notice.html.erb
@@ -5,9 +5,9 @@
     <tr id="msg-<%= n.id %>">
       <td>
         <% if n.types == 1 || n.types == 3 %>
-          <%= link_to n.body , post_path(n.sender_id) %>
+          <%= link_to n.body , post_path(n.user_id) %>
         <% else %>
-          <%= link_to n.body , user_path(n.sender_id) %>
+          <%= link_to n.body , user_path(n.user_id) %>
         <% end %>
       </td>
       <td><%= link_to '刪除', message_path(n) ,:class => "btn btn-default", method: :delete,remote: true %></td>
