--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -20,7 +20,7 @@
           <div id="notificationsBody">
             <% mynotice.each do |n|  %>
               <% if n.types == 1 || n.types == 3 %>
-                <div class ='notifications notifypost-show' data-toggle="modal" data-target="#notifypostmodal" data-id="<%= n.user_id %>"><%=  n.body %></div>
+                <div class ='notifications notifypost-show' data-toggle="modal" data-target="#notifypostmodal" data-id="<%= n.post_id %>"><%=  n.body %></div>
               <% else %>
                 <%= link_to n.body.html_safe , user_path(n.user_id),:class => 'notifications' %>
               <% end %>
