--- a/app/views/users/_contract.html.erb
+++ b/app/views/users/_contract.html.erb
@@ -6,15 +6,15 @@
         <h4 class="modal-title" id="myModalLabel">會員條款</h4>
       </div>
       <div class="modal-body">
-        <textarea readonly style="width:100%;height:500px;">親愛的會員您好，非常感謝您使用Nonsense的網路服務（以下稱本服務），Nonsense將根據以下之會員服務條款(以下簡稱本條款)，提供會員便利的服務功能。為保障您的權益，請務必詳讀本條款，在您註冊成為Nonsense會員、或開始使用本服務時，即視為您已經閱讀、瞭解並同意接受本條款及「隱私權保護政策」之所有內容，並視為您已確認詳閱並同意個人資料保護告知暨同意事項。如您不同意本條款之全部或部分內容，請勿註冊，並請立即停止使用本服務。本條款之具體約定內容如後：
+        <textarea readonly style="width:100%;height:500px;">親愛的會員您好，非常感謝您使用Squeeze的網路服務（以下稱本服務），Squeeze將根據以下之會員服務條款(以下簡稱本條款)，提供會員便利的服務功能。為保障您的權益，請務必詳讀本條款，在您註冊成為Squeeze會員、或開始使用本服務時，即視為您已經閱讀、瞭解並同意接受本條款及「隱私權保護政策」之所有內容，並視為您已確認詳閱並同意個人資料保護告知暨同意事項。如您不同意本條款之全部或部分內容，請勿註冊，並請立即停止使用本服務。本條款之具體約定內容如後：
 
           一、網路會員資料
 
-          1.在您使用本服務之前，必須提供正確個人資料，並註冊成為Nonsense會員，無須支付任何費用；在完成註冊後，始得登入Nonsense網站，使用本服務及參加與本服務相關之活動。如個人資料有異動，請務必即時更新，以保障您的權益。如因會員未正確更新個人資料，致未能收到Nonsense寄發之會員權益、消費優惠、活動內容等相關資訊，或變更、終止會員權益、消費優惠、活動內容之通知，會員同意在此情形下，視為會員已經收到該等資訊或通知。
+          1.在您使用本服務之前，必須提供正確個人資料，並註冊成為Squeeze會員，無須支付任何費用；在完成註冊後，始得登入Squeeze網站，使用本服務及參加與本服務相關之活動。如個人資料有異動，請務必即時更新，以保障您的權益。如因會員未正確更新個人資料，致未能收到Squeeze寄發之會員權益、消費優惠、活動內容等相關資訊，或變更、終止會員權益、消費優惠、活動內容之通知，會員同意在此情形下，視為會員已經收到該等資訊或通知。
 
-          2.個人資料之填寫如有重複、錯誤或虛偽不實、故意冒用他人姓名、侵害他人姓名權、公司名稱專用權、商標權或其他智慧財產權、或有違反公序良俗、政府法令、或破壞Nonsense服務宗旨…等情形，Nonsense得拒絕註冊，並有權立即暫停或終止會員帳號，取消會員資格，拒絕提供本服務，會員不得向Nonsense為任何主張，並應自行承擔全部法律責任。
+          2.個人資料之填寫如有重複、錯誤或虛偽不實、故意冒用他人姓名、侵害他人姓名權、公司名稱專用權、商標權或其他智慧財產權、或有違反公序良俗、政府法令、或破壞Squeeze服務宗旨…等情形，Squeeze得拒絕註冊，並有權立即暫停或終止會員帳號，取消會員資格，拒絕提供本服務，會員不得向Squeeze為任何主張，並應自行承擔全部法律責任。
 
-          3.	隱私權保護聲明：會員之個人資料受到Nonsense隱私權條款之保護與規範。
+          3.	隱私權保護聲明：會員之個人資料受到Squeeze隱私權條款之保護與規範。
 
           二、網路會員的義務與責任
 
@@ -22,8 +22,8 @@
 
           2.會員應自行確保會員帳號及密碼之機密與安全。會員對於自己本身使用會員帳號及密碼所為之一切行為，應自行承擔全部法律責任，並同意遵守以下事項：
 
-          (1)會員帳號或密碼如被冒用或盜用，或有其他任何安全問題發生時，請立即通知Nonsense顧客服務中心(客服信箱：)。
-          (2)會員不得將帳號、密碼及其他相關資料，揭露、洩露或提供給第三人知悉、或使用。除被冒用或盜用之情形外，使用會員帳號及密碼進入Nonsense網站或使用本服務之所有行為，包括但不限於查詢、檢索、閱覽、更改個人資料、參與各項活動，以及取得相關消費資訊、購買商品或服務…等，均視為會員本人之行為。任何人包括會員，亦不得使用他人之帳號或密碼使用本服務。如有違反，因而涉及犯罪或侵害他人之權利，應自負全部法律責任。
+          (1)會員帳號或密碼如被冒用或盜用，或有其他任何安全問題發生時，請立即通知Squeeze顧客服務中心(客服信箱：)。
+          (2)會員不得將帳號、密碼及其他相關資料，揭露、洩露或提供給第三人知悉、或使用。除被冒用或盜用之情形外，使用會員帳號及密碼進入Squeeze網站或使用本服務之所有行為，包括但不限於查詢、檢索、閱覽、更改個人資料、參與各項活動，以及取得相關消費資訊、購買商品或服務…等，均視為會員本人之行為。任何人包括會員，亦不得使用他人之帳號或密碼使用本服務。如有違反，因而涉及犯罪或侵害他人之權利，應自負全部法律責任。
           (3)會員帳號、密碼及會員權益，僅供會員個人使用及享有，不得轉讓、轉借或以任何方式提供他人使用，亦不得共用。
 
           3.會員不得基於非法目的，或以任何非法方式使用本服務，並應遵守中華民國相關法令及網際網路之國際規範。若會員於中華民國領域外使用本服務，並應遵守當地國家或地域之法令。會員不得利用本服務從事包括但不限於下列侵害他人權益之行為：
@@ -34,42 +34,43 @@
           (4)冒用他人名義使用本服務。
           (5)傳輸或散佈電腦病毒。
           (6)濫發廣告郵件。
-          (7)其他Nonsense有正當理由認為不適當之行為。
+          (7)其他Squeeze有正當理由認為不適當之行為。
 
-          4.	如會員利用本服務從事侵害他人權利之行為，或犯罪活動，或任何違法行為，會員應自負全部法律責任，Nonsense將立即撤銷會員資格，永久禁止使用本服務，並請求Nonsense因此所受之全部損害，包括但不限於商譽損失、裁判費、律師費…等。
+          4.如會員利用本服務從事侵害他人權利之行為，或犯罪活動，或任何違法行為，會員應自負全部法律責任，Squeeze將立即撤銷會員資格，永久禁止使用本服務，並請求Squeeze因此所受之全部損害，包括但不限於商譽損失、裁判費、律師費…等。
 
           三、服務內容的變更
-          會員同意食Nonsense隨時調整、變更、修改或終止本服務及本條款，並得於修改及變更前60日，於Nonsense網站公告後生效，不再另行個別通知。會員因參與Nonsense活動及使用Nonsense服務，而與Nonsense所發生之權利義務關係，均以本條款最新修訂之版本為準。如會員不同意修改或變更，應於修改或變更生效日前，以書面通知Nonsense，由雙方協商相關事宜，如逾期未為通知，應視為同意修改或變更。
+          會員同意食Squeeze隨時調整、變更、修改或終止本服務及本條款，並得於修改及變更前60日，於Squeeze網站公告後生效，不再另行個別通知。會員因參與Squeeze活動及使用Squeeze服務，而與Squeeze所發生之權利義務關係，均以本條款最新修訂之版本為準。如會員不同意修改或變更，應於修改或變更生效日前，以書面通知Squeeze，由雙方協商相關事宜，如逾期未為通知，應視為同意修改或變更。
 
           四、電子報的寄送
-          會員同意Nonsense得不定期發送電子報或商品訊息(EDM)至會員所登錄的電子信箱帳號。惟當會員收到訊息後表示拒絕接受行銷時，Nonsense將停止繼續發送行銷訊息。
+          會員同意Squeeze得不定期發送電子報或商品訊息(EDM)至會員所登錄的電子信箱帳號。惟當會員收到訊息後表示拒絕接受行銷時，Squeeze將停止繼續發送行銷訊息。
 
           五、網路服務的中斷或停止
-          如Nonsense電腦或資訊系統發生異常狀況，Nonsense有權暫停提供本服務，直至異常狀況排除。
+          如Squeeze電腦或資訊系統發生異常狀況，Squeeze有權暫停提供本服務，直至異常狀況排除。
 
           六、智慧財產權的保護
 
-          1.Nonsense所使用之軟體或程式、網站上所有內容，包括但不限於著作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由Nonsense或其權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改作、散布、發行、公開發表、進行還原工程、解編或反向組譯。若會員欲引用或轉載前述軟體、程式或網站內容，必須依法取得Nonsense或其權利人的事前書面同意。
+          1.Squeeze所使用之軟體或程式、網站上所有內容，包括但不限於著作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由Squeeze或其權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改作、散布、發行、公開發表、進行還原工程、解編或反向組譯。若會員欲引用或轉載前述軟體、程式或網站內容，必須依法取得Squeeze或其權利人的事前書面同意。
 
-          2.在尊重他人智慧財產權之原則下，會員同意在使用Nonsense之服務時，不作侵害他人智慧財產權之行為，如有違反，會員應對Nonsense負損害賠償責任（包括但不限於訴訟費用及律師費用等）。
+          2.在尊重他人智慧財產權之原則下，會員同意在使用Squeeze之服務時，不作侵害他人智慧財產權之行為，如有違反，會員應對Squeeze負損害賠償責任（包括但不限於訴訟費用及律師費用等）。
 
-          3.若會員有涉及侵權之情事，Nonsense可暫停全部或部份之服務，或逕自以取消會員帳號之方式處理。
+          3.若會員有涉及侵權之情事，Squeeze可暫停全部或部份之服務，或逕自以取消會員帳號之方式處理。
 
-          4.在Nonsense上由會員發布之圖片、留言等，若有涉及違法或侵害他人權利之行為，均屬會員個人之行為，Nonsense不為其個人行為負任何責任。
-          5.若有發現智慧財產權遭侵害之情事，請將所遭侵權之情形及聯絡方式，附具真實陳述及擁有合法智慧財產權之聲明，並立即通知Nonsense顧客服務帳號 (目前無客服信箱，暫由nonsense網站上的nonsense官方帳號代替)
+          4.在Squeeze上由會員發布之圖片、留言等，若有涉及違法或侵害他人權利之行為，均屬會員個人之行為，Squeeze不為其個人行為負任何責任。
+
+          5.若有發現智慧財產權遭侵害之情事，請將所遭侵權之情形及聯絡方式，附具真實陳述及擁有合法智慧財產權之聲明，並立即通知Squeeze顧客服務帳號 (目前無客服信箱，暫由nonsense網站上的nonsense官方帳號代替)
 
           七、準據法及管轄法院
           本條款之解釋與適用，以及因使用本服務所進行之一切行為及網路交易，均以中華民國法律為準據法。如因本服務發生爭議而涉訟，應以臺灣臺北地方法院為第一審管轄法院。
 
-          八、Nonsense暨關係企業，個人資料保護告知及暨同意事項：
+          八、Squeeze暨關係企業，個人資料保護告知及暨同意事項：
 
-          1.為提供會員最完善的網路服務，並保護會員個人資料，Nonsense謹此依個人資料保護法(下稱個資法)第8條及第9條規定，告知您如下事項：
+          1.為提供會員最完善的網路服務，並保護會員個人資料，Squeeze謹此依個人資料保護法(下稱個資法)第8條及第9條規定，告知您如下事項：
 
-          蒐集之目的、個人資料類別、利用期間、地區、對象及方式為提供會員有關Nonsense或關係企業各項消費優惠、商品、服務、活動及最新資訊，並有效管理會員資料、進行網路購物及其他電子商務服務與調查、滿意度及消費統計分析調查(下稱蒐集目的)，Nonsense或關係企業將於上開蒐集目的消失前，在臺灣地區或完成上開蒐集目的之必要地區內，蒐集、處理、利用或國際傳輸您填載於會員申請、兌獎及活動所提供之個人資料、消費與交易資料、信用卡刷卡資料，或日後經您同意而提供之其他個人資料。在上開蒐集目的範圍內，Nonsense會將您全部或部分個人資料，提供予關係企業或合作廠商。
-          例：當會員使用本服務進行線上兌獎，Nonsense需透過宅配貨運等合作廠商，方能完成貨品或相關贈品之配送，故當會員完成線上兌獎，即表示會員同意並授權Nonsense得將會員提供之個人資料(如收件人姓名、配送地址、電話…等)提供予宅配及貨運合作廠商，以利完成貨品或相關贈品之配送。
+          蒐集之目的、個人資料類別、利用期間、地區、對象及方式為提供會員有關Squeeze或關係企業各項消費優惠、商品、服務、活動及最新資訊，並有效管理會員資料、進行網路購物及其他電子商務服務與調查、滿意度及消費統計分析調查(下稱蒐集目的)，Squeeze或關係企業將於上開蒐集目的消失前，在臺灣地區或完成上開蒐集目的之必要地區內，蒐集、處理、利用或國際傳輸您填載於會員申請、兌獎及活動所提供之個人資料、消費與交易資料、信用卡刷卡資料，或日後經您同意而提供之其他個人資料。在上開蒐集目的範圍內，Squeeze會將您全部或部分個人資料，提供予關係企業或合作廠商。
+          例：當會員使用本服務進行線上兌獎，Squeeze需透過宅配貨運等合作廠商，方能完成貨品或相關贈品之配送，故當會員完成線上兌獎，即表示會員同意並授權Squeeze得將會員提供之個人資料(如收件人姓名、配送地址、電話…等)提供予宅配及貨運合作廠商，以利完成貨品或相關贈品之配送。
 
           2.權利行使事項：
-          您可透過會員服務中心(客服信箱：)向Nonsense，行使下列權利，除個資法另有規定外，Nonsense或關係企業不會拒絕：
+          您可透過會員服務中心(客服信箱：)向Squeeze，行使下列權利，除個資法另有規定外，Squeeze或關係企業不會拒絕：
           (1)查詢或請求閱覽您的個人資料。
           (2)製作給您個人資料複本。
           (3)補充或更正您的個人資料。
@@ -77,32 +78,32 @@
           (5)刪除您的個人資料。
           (6)您的拒絕接受行銷。
 
-          3.	注意事項：
-          您同意以電子文件作為行使個資法書面同意之方式。如您不同意提供個人資料，或要求刪除或停止蒐集、處理、利用或國際傳輸您的個人資料，您瞭解Nonsense可能因此無法進行網路會員資格審核及相關處理作業，或提供您完善的網路服務，尚請見諒。
+          3.注意事項：
+          您同意以電子文件作為行使個資法書面同意之方式。如您不同意提供個人資料，或要求刪除或停止蒐集、處理、利用或國際傳輸您的個人資料，您瞭解Squeeze可能因此無法進行網路會員資格審核及相關處理作業，或提供您完善的網路服務，尚請見諒。
 
           智慧財產權的保護
 
-          1.Nonsense所使用之軟體或程式、網站上所有內容，包括但不限於著作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由Nonsense或其權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改作、散布、發行、公開發表、進行還原工程、解編或反向組譯。若會員欲引用或轉載前述軟體、程式或網站內容，必須依法取得Nonsense或其權利人的事前書面同意。
+          1.Squeeze所使用之軟體或程式、網站上所有內容，包括但不限於著作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由Squeeze或其權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改作、散布、發行、公開發表、進行還原工程、解編或反向組譯。若會員欲引用或轉載前述軟體、程式或網站內容，必須依法取得Squeeze或其權利人的事前書面同意。
 
-          2.在尊重他人智慧財產權之原則下，會員同意在使用Nonsense之服務時，不作侵害他人智慧財產權之行為，如有違反，會員應對Nonsense負損害賠償責任（包括但不限於訴訟費用及律師費用等）。
+          2.在尊重他人智慧財產權之原則下，會員同意在使用Squeeze之服務時，不作侵害他人智慧財產權之行為，如有違反，會員應對Squeeze負損害賠償責任（包括但不限於訴訟費用及律師費用等）。
 
-          3.若會員有涉及侵權之情事，Nonsense可暫停全部或部份之服務，或逕自以取消會員帳號之方式處理。
+          3.若會員有涉及侵權之情事，Squeeze可暫停全部或部份之服務，或逕自以取消會員帳號之方式處理。
 
-          4.在Nonsense上由會員發布之圖片、留言等，若有涉及違法或侵害他人權利之行為，均屬會員個人之行為，Nonsense不為其個人行為負任何責任。
+          4.在Squeeze上由會員發布之圖片、留言等，若有涉及違法或侵害他人權利之行為，均屬會員個人之行為，Squeeze不為其個人行為負任何責任。
 
-          5.若有發現智慧財產權遭侵害之情事，請將所遭侵權之情形及聯絡方式，附具真實陳述及擁有合法智慧財產權之聲明，並立即通知Nonsense顧客服務帳號 (目前無客服信箱，暫由nonsense網站上的nonsense官方帳號代替)
+          5.若有發現智慧財產權遭侵害之情事，請將所遭侵權之情形及聯絡方式，附具真實陳述及擁有合法智慧財產權之聲明，並立即通知Squeeze顧客服務帳號 (目前無客服信箱，暫由nonsense網站上的nonsense官方帳號代替)
 
           會員隱私條例
-          Nonsense重視會員的隱私權並且嚴格遵循「個人資料保護法」之規定，因此制訂了隱私權保護政策，您可參考下列隱私權保護政策的內容。
+          Squeeze重視會員的隱私權並且嚴格遵循「個人資料保護法」之規定，因此制訂了隱私權保護政策，您可參考下列隱私權保護政策的內容。
           若您不願意提供個人資料或反對此份政策說明，請立即停用服務。若您提供個人資料給我們，則視為您同意此項隱私權政策。
           特殊狀況外，在未經會員同意之下，我們絕不會將會員的個人資料提供予任何與本網站服務無關之第三人。
 
           1.資料收集
           為評估、監測各網頁頁面的流量等，我們會保留您在使用本網站時伺服器自行產生的紀錄，包含您檢視過的網頁、點選的連結、以及其他和本網站或我們提供的服務相關的執行動作，並且也會收集瀏覽器傳送給每個網站瀏覽的特定標準資訊，例如您的IP位址、瀏覽器類型和語言、存取時間和與參考的網站位址等。
-          您同意隱私權保護政策適用於Nonsense以及與Nonsense合作的個人或公司（以下簡稱為第三方），其均可在自身營運期間，依據本隱私權政策蒐集、處理、利用您的個人資料。若您不同意本隱私權政策，Nonsense或第三方得以拒絕向您提供服務。
+          您同意隱私權保護政策適用於Squeeze以及與Squeeze合作的個人或公司（以下簡稱為第三方），其均可在自身營運期間，依據本隱私權政策蒐集、處理、利用您的個人資料。若您不同意本隱私權政策，Squeeze或第三方得以拒絕向您提供服務。
 
           2.Cookies收集
-          為了便利使用者使用，Nonsense會在您的電腦上設定並存取Nonsense之cookie，cookie是網站伺服器用來和瀏覽器進行溝通的一種技術，它能辨識區別使用者，以保存使用者上次造訪本網站之喜好設定與一些快取資訊，節省使用者的時間。
+          為了便利使用者使用，Squeeze會在您的電腦上設定並存取Squeeze之cookie，cookie是網站伺服器用來和瀏覽器進行溝通的一種技術，它能辨識區別使用者，以保存使用者上次造訪本網站之喜好設定與一些快取資訊，節省使用者的時間。
 
           3.資料分享與揭露
           除以下情形外我們不會向任何人或單位提供您的個人資料，或與之分享：
@@ -111,12 +112,12 @@
           3.協助調查和防止非法活動
           4.涉嫌詐欺。
           5.對人身安全有潛在威脅的狀況。
-          6.其他Nonsense有正當理由認為違法之疑慮。
+          6.其他Squeeze有正當理由認為違法之疑慮。
 
-          如因不可抗力或非因我們之疏失導致個人資料外流，您同意Nonsense不負任何賠償之責。
-          若本服務全部或部分業務被其他公司收購或合併，我們會將您的個人資料移轉給該公司，Nonsense會在您的個人資料被移轉前通知您。
+          如因不可抗力或非因我們之疏失導致個人資料外流，您同意Squeeze不負任何賠償之責。
+          若本服務全部或部分業務被其他公司收購或合併，我們會將您的個人資料移轉給該公司，Squeeze會在您的個人資料被移轉前通知您。
 
-          以上服務條款與隱私權政策最後更新日期為2016年7月。Nonsense保留修改此上述條款之權利。假若對上述條款與政策有任何疑問，歡迎來信與我們連絡!
+          以上服務條款與隱私權政策最後更新日期為2016年7月。Squeeze保留修改此上述條款之權利。假若對上述條款與政策有任何疑問，歡迎來信與我們連絡!
         </textarea>
       </div>
     </div>
